k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo-dev
  labels:
    app: devops-demo
    environment: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-demo
      environment: dev
  template:
    metadata:
      labels:
        app: devops-demo
        environment: dev
    spec:
      containers:
      - name: devops-demo
        image: gcr.io/$PROJECT_ID/devops-demo:dev-${env.BUILD_ID}
        ports:
        - containerPort: 8080
