k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-dev
  labels:
    app: devops-demo
    environment: dev
spec:
  selector:
    app: devops-demo
    environment: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
